# FastRouter

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  MIGRATION_GUIDE.md  Makefile  README.md  fast_router.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml
MIGRATION_GUIDE/: index.html
advanced-features/: index.html
changelog/: index.html
docs/: MIGRATION_GUIDE.md  advanced-features.md  changelog.md  getting-started.md  index.md  internal-api.md
docs/examples/: REQUEST_BODIES.md  demo.py  demo_requests.py  tag_customization_example.py
example/: main.py
example/routes/blog/: [slug:].py
example/routes/items/: index.py
examples/: demo.py  demo_requests.py  tag_customization_example.py
examples/REQUEST_BODIES/: index.html
getting-started/: index.html
internal-api/: index.html
search/: search_index.json
src/file_router/: analyzer.py
tests/: test_analyzer.py  test_curl.py
