[project]
name = "fast-router"
version = "0.0.3"
description = "A simple and intuitive file-based router for FastAPI applications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "mkdocs-material>=9.6.21",
    "uvicorn>=0.35.0",
]

[project.dev-dependencies]
pytest = ">=8.2.2"
httpx = ">=0.27.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "ruff>=0.12.6",
]
